--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "babel-runtime": "^5.8.0",
     "connect-history-api-fallback": "^1.1.0",
     "cross-env": "^1.0.7",
-    "css-loader": "^0.23.0",
+    "css-loader": "^0.23.1",
     "eslint": "^2.0.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-friendly-formatter": "^1.2.2",
@@ -34,7 +34,7 @@
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.4",
+    "file-loader": "^0.8.5",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
     "inject-loader": "^2.0.1",
@@ -47,6 +47,7 @@
     "karma-webpack": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.3",
     "rimraf": "^2.5.0",
+    "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
