--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "material-design-icons": "^2.2.0",
     "material-design-lite": "^1.1.1",
     "vue": "^1.0.16",
+    "vue-async-data": "^1.0.2",
     "vue-router": "^0.7.11"
   },
   "devDependencies": {
