--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   "dependencies": {
     "material-design-icons": "^2.2.0",
     "material-design-lite": "^1.1.1",
-    "vue": "^1.0.16",
-    "vue-async-data": "^1.0.2",
-    "vue-router": "^0.7.11"
+    "vue": "^2.2.1",
+    "vue-router": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -34,10 +33,10 @@
     "eslint-plugin-standard": "^1.3.2",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.8.5",
     "function-bind": "^1.0.2",
-    "html-webpack-plugin": "^2.8.1",
+    "html-webpack-plugin": "^2.28.0",
     "inject-loader": "^2.0.1",
     "jasmine-core": "^2.4.1",
     "json-loader": "^0.5.4",
@@ -51,12 +50,13 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.2.0",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^8.1.3",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^11.0.0",
+    "vue-style-loader": "^2.0.3",
+    "vue-template-compiler": "^2.2.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1",
     "xo": "^0.12.1"
   },
   "xo": {
