--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "xo && karma start build/karma.conf.js --single-run"
   },
   "dependencies": {
-    "material-design-icons": "^2.2.0",
+    "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.1.1",
     "vue": "^2.2.1",
     "vue-router": "^2.3.0"
@@ -20,36 +20,36 @@
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
-    "babel-runtime": "^5.8.0",
+    "babel-runtime": "^6.23.0",
     "connect-history-api-fallback": "^1.1.0",
-    "cross-env": "^1.0.7",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.0.0",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-friendly-formatter": "^1.2.2",
+    "cross-env": "^3.1.4",
+    "css-loader": "^0.26.2",
+    "eslint": "^3.16.1",
+    "eslint-config-standard": "^7.0.0",
+    "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-html": "^1.3.0",
-    "eslint-plugin-promise": "^1.0.8",
-    "eslint-plugin-standard": "^1.3.2",
+    "eslint-plugin-html": "^2.0.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.8.5",
+    "file-loader": "^0.10.1",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.28.0",
-    "inject-loader": "^2.0.1",
+    "inject-loader": "^3.0.0-beta4",
     "jasmine-core": "^2.4.1",
     "json-loader": "^0.5.4",
-    "karma": "^0.13.15",
-    "karma-jasmine": "^0.3.6",
+    "karma": "^1.5.0",
+    "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.0",
-    "karma-spec-reporter": "0.0.24",
-    "karma-webpack": "^1.7.0",
+    "karma-spec-reporter": "0.0.30",
+    "karma-webpack": "^2.0.2",
     "phantomjs-prebuilt": "^2.1.3",
     "rimraf": "^2.5.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^1.2.0",
+    "vue-hot-reload-api": "^2.0.11",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^11.0.0",
     "vue-style-loader": "^2.0.3",
@@ -57,7 +57,7 @@
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1",
-    "xo": "^0.12.1"
+    "xo": "^0.17.1"
   },
   "xo": {
     "esnext": true
